Improve IntelliJ IDEA support